# bloomberg-exchange-hackatum2022

./: .env  Cargo.toml  README.md  brainstorm.md  notes.md  schema.sql
client/: index.html  package-lock.json  package.json
client/src/: App.svelte  app.css
client/src/lib/: AggOrderBook.svelte  Chart.svelte  Navbar.svelte  TradeForm.svelte
examples/: server_add_request.sh
server/: Cargo.toml  README.md
server/src/: main.rs
src/: main.rs
