[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.17"
hyper = { version = "0.14.23", features = ["full"] }
serde = { version = "1.0.147", features = ["derive", "alloc"] }
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
uuid = { version = "1.2.2", features = ["serde"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
